<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InventoryStatusActivity">

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/previous"
        app:backgroundTint="#454545"
        app:layout_constraintEnd_toStartOf="@+id/buttonNext"
        app:layout_constraintStart_toStartOf="@+id/textViewStockProductName"
        app:layout_constraintTop_toBottomOf="@+id/textViewStockProductName" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:backgroundTint="#454545"
        app:layout_constraintEnd_toEndOf="@+id/textViewStockProductQuantity"
        app:layout_constraintStart_toEndOf="@+id/buttonPrevious"
        app:layout_constraintTop_toTopOf="@+id/buttonPrevious" />

    <TextView
        android:id="@+id/textViewStockProductName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStockProductType"
        app:layout_constraintEnd_toStartOf="@+id/textViewStockProductType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewStockProductType" />

    <TextView
        android:id="@+id/textViewStockProductType"
        android:layout_width="0dp"
        android:layout_height="207dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/textViewStockProductQuantity"
        app:layout_constraintStart_toEndOf="@+id/textViewStockProductName"
        app:layout_constraintTop_toBottomOf="@+id/textViewInventoryStatusType" />

    <TextView
        android:id="@+id/textViewStockProductQuantity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStockProductType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewStockProductType"
        app:layout_constraintTop_toTopOf="@+id/textViewStockProductType" />

    <TextView
        android:id="@+id/textViewInventoryStatusProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        app:layout_constraintEnd_toStartOf="@+id/textViewInventoryStatusType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewInventoryStatusType" />

    <TextView
        android:id="@+id/textViewInventoryStatusType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/product_type"
        app:layout_constraintEnd_toStartOf="@+id/textViewInventoryStatusQuantity"
        app:layout_constraintStart_toEndOf="@+id/textViewInventoryStatusProduct"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewInventoryStatusQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewInventoryStatusType"
        app:layout_constraintTop_toTopOf="@+id/textViewInventoryStatusType" />
</androidx.constraintlayout.widget.ConstraintLayout>